# adk-python

./: .windsurfrules  PLANNING.md  TASK.md
contentflow-ai/: README.md  alembic.ini  deploy.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_local.py
contentflow-ai/alembic/: README.md  env.py
contentflow-ai/docs/deployment/: modal_labs_deployment_guide.md  vllm_deployment_guide.md
contentflow-ai/docs/project-checkpoints/: checkpoint-1.txt
contentflow-ai/docs/project-checkpoints/progress/: 1.md
contentflow-ai/modal/: deploy.py  deployment.py  test_deployment.py  test_endpoints.py  test_gpu.py
contentflow-ai/scripts/: deploy_api.py  env_manager.py  simple_deploy.py  simple_env_manager.py
contentflow-ai/src/: __init__.py
contentflow-ai/src/agents/: __init__.py  communication.py
contentflow-ai/src/agents/communication/: __init__.py  agent_communicator.py  message_bus.py  protocols.py
contentflow-ai/src/agents/distribution/: __init__.py
contentflow-ai/src/agents/extraction/: __init__.py  audio_extraction_agent.py  video_download_agent.py  web_content_agent.py
contentflow-ai/src/agents/orchestration/: __init__.py  workflow.py  workflow_coordinator.py  workflow_definition.py
contentflow-ai/src/agents/transformation/: __init__.py  text_transformation_agent.py
contentflow-ai/src/api/: auth.py  db.py  deploy.py  main.py  minimal_deploy.py
contentflow-ai/src/api/models/: core.py  schemas.py
contentflow-ai/src/api/routes/: content.py  management.py  processing.py
contentflow-ai/src/models/: __init__.py  analytics.py  content.py  workflow.py
contentflow-ai/src/models/serving/: vllm_service.py
contentflow-ai/src/tools/: __init__.py  crawl4ai_tools.py  ffmpeg_tools.py  huggingface_tools.py  ytdlp_tools.py
contentflow-ai/tests/: __init__.py  conftest.py  test_api.py  test_auth.py
contentflow-ai/tests/unit/: __init__.py  test_simple_asyncio.py
contentflow-ai/tests/unit/agents/: __init__.py  test_communication.py  test_protocols.py
contentflow-ai/tests/unit/agents/communication/: test_message_bus.py
contentflow-ai/tests/unit/tools/: test_crawl4ai_tools.py
(+105 files in other folders)
